--- a/README
+++ b/README
@@ -25,3 +25,5 @@
  1. Добавить подписчика для топика - POST /subscription/имя_топика/имя_подписчика;
  2. Удалить подписчика топика - DELETE /subscription/имя_топика/имя_подписчика;
  3. Просмотреть список подписчиков топика - GET /subscription/имя_топика.
+
+Порт по умолчанию 8092
