Controllers tests finished

--- a/README
+++ b/README
@@ -27,3 +27,8 @@
  3. Просмотреть список подписчиков топика - GET /subscription/имя_топика.
 
 Порт по умолчанию 8092
+
+В тесте MessageBrokerTest постарался воспроизвести описанную в задаче ситуацию (успел не всё):
+1. Отправляю кучу сообщений случайным топикам
+2. Удаляю топики
+3. Отписываю подписчиков
